kubedump/dowload/kubedump-kubedb-gcs-repository-kckup-frequent-backup-1745841000/manifest/kubestash-tmp/manifest/validatingwebhookconfigurations.admissionregistration.k8s.io/cluster/validators.ops.kubedb.com.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: kubedb
    meta.helm.sh/release-namespace: kubedb
  creationTimestamp: "2025-04-28T11:28:31Z"
  generation: 1
  labels:
    app.kubernetes.io/component: kubedb-ops-manager
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/version: v0.29.1
    helm.sh/chart: kubedb-webhook-server-v0.29.0
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
      f:webhooks:
        .: {}
        k:{"name":"elasticsearchopsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"kafkaopsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mariadbopsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mongodbopsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mssqlserveropsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mysqlopsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"postgresopsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"publisherwebhook.validators.postgres.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"redisopsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"redissentinelopsrequestwebhook.validators.ops.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"subscriberwebhook.validators.postgres.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: helm
    operation: Update
    time: "2025-04-28T11:28:31Z"
  name: validators.ops.kubedb.com
  resourceVersion: "59488"
  uid: 62172712-0bde-4881-a9da-e1f6c0a47c61
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-elasticsearchopsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: elasticsearchopsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - elasticsearchopsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-kafkaopsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: kafkaopsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - kafkaopsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-mariadbopsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mariadbopsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - mariadbopsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-mongodbopsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mongodbopsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - mongodbopsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-mssqlserveropsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mssqlserveropsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - mssqlserveropsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-mysqlopsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mysqlopsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - mysqlopsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-postgresopsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: postgresopsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - postgresopsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-postgres-kubedb-com-v1alpha1-publisher
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: publisherwebhook.validators.postgres.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - postgres.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - publishers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-postgres-kubedb-com-v1alpha1-subscriber
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: subscriberwebhook.validators.postgres.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - postgres.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - subscribers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-redisopsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: redisopsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - redisopsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-ops-kubedb-com-v1alpha1-redissentinelopsrequest
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: redissentinelopsrequestwebhook.validators.ops.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - ops.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - redissentinelopsrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
